--- a/gallery.html
+++ b/gallery.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="de">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eigene Webseite</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eigene Webseite</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-  <link rel="stylesheet" href="style.css">
+  <body>
+    <header>
+      <h1>Klassenlager</h1>
+      <nav id="header-nav">
+        <ul>
+          <li>
+            <a href="index.html">Lager</a>
+          </li>
+          <li>
+            <a href="index.html">Reise</a>
+          </li>
+          <li>
+            <a href="index.html">Beiträge</a>
+          </li>
+          <li>
+            <a href="gallery.html" class="active">Galerie</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-</head>
-
-<body>
-  <header>
-    <h1>Klassenlager</h1>
-    <nav id="header-nav">
-      <ul>
-        <li>
-          <a href="index.html">Lager</a>
-        </li>
-        <li>
-          <a href="index.html">Reise</a>
-        </li>
-        <li>
-          <a href="index.html">Beiträge</a>
-        </li>
-        <li>
-          <a href="gallery.html" class="active">Galerie</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h2>Galerie</h2>
-    <div id="photo-grid">
-      <img src="https://media.istockphoto.com/id/188046960/photo/view-of-saas-fee-switzerland.webp?b=1&s=170667a&w=0&k=20&c=O3dSgU6KL5-xzCHs7wUeyYztxnP3cRIdcSh-XaJ_f9Q=" alt="">
-      <img src="https://media.istockphoto.com/id/1363637774/photo/hiking-trail-in-the-ofental-towards-antronapass-saas-fee-saas-almagell-saas-grund-mattmark.webp?b=1&s=170667a&w=0&k=20&c=XmuGLLLX4RHjnCQMrmW1hYAoBYL8w6wz-h6ioadwn3Y=" alt="">
-      <img src="https://media.istockphoto.com/id/1031320576/photo/saas-valley-switzerland.webp?b=1&s=170667a&w=0&k=20&c=tpgrO7AZyOMU286PhhMD3GeyQgbjCBXU3_ENLH7ZiW4=" alt="">
-      <img src="https://media.istockphoto.com/id/592669116/photo/hohsaas-mountain-142-m-the-alps-switzerland.webp?b=1&s=170667a&w=0&k=20&c=nf40-NUvdZT8a84XtKA3HlEgceaSyicSJBUU9Q2ym5g=" alt="">
-    </div>
-  </main>
-
-</body>
-
+    <main>
+      <h2>Galerie</h2>
+      <div id="photo-grid">
+        <img
+          src="https://media.istockphoto.com/id/188046960/photo/view-of-saas-fee-switzerland.webp?b=1&s=170667a&w=0&k=20&c=O3dSgU6KL5-xzCHs7wUeyYztxnP3cRIdcSh-XaJ_f9Q="
+          alt=""
+        >
+        <img
+          src="https://media.istockphoto.com/id/1363637774/photo/hiking-trail-in-the-ofental-towards-antronapass-saas-fee-saas-almagell-saas-grund-mattmark.webp?b=1&s=170667a&w=0&k=20&c=XmuGLLLX4RHjnCQMrmW1hYAoBYL8w6wz-h6ioadwn3Y="
+          alt=""
+        >
+        <img
+          src="https://media.istockphoto.com/id/1031320576/photo/saas-valley-switzerland.webp?b=1&s=170667a&w=0&k=20&c=tpgrO7AZyOMU286PhhMD3GeyQgbjCBXU3_ENLH7ZiW4="
+          alt=""
+        >
+        <img
+          src="https://media.istockphoto.com/id/592669116/photo/hohsaas-mountain-142-m-the-alps-switzerland.webp?b=1&s=170667a&w=0&k=20&c=nf40-NUvdZT8a84XtKA3HlEgceaSyicSJBUU9Q2ym5g="
+          alt=""
+        >
+      </div>
+    </main>
+  </body>
 </html>
