--- a/index.html
+++ b/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="de">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eigene Webseite</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eigene Webseite</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-  <link rel="stylesheet" href="style.css">
+  <body>
+    <header>
+      <h1>Klassenlager</h1>
+      <nav id="header-nav">
+        <ul>
+          <li>
+            <a href="index.html" class="active">Lager</a>
+          </li>
+          <li>
+            <a href="index.html">Reise</a>
+          </li>
+          <li>
+            <a href="index.html">Beiträge</a>
+          </li>
+          <li>
+            <a href="gallery.html">Galerie</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-</head>
-
-<body>
-  <header>
-    <h1>Klassenlager</h1>
-    <nav id="header-nav">
-      <ul>
-        <li>
-          <a href="index.html" class="active">Lager</a>
-        </li>
-        <li>
-          <a href="index.html">Reise</a>
-        </li>
-        <li>
-          <a href="index.html">Beiträge</a>
-        </li>
-        <li>
-          <a href="gallery.html">Galerie</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h2>Unsere Reise ins Saas-Tal</h2>
-    <section>
-      Das Klassenlager der 1AM in Saas-Grund.
-    </section>
-  </main>
-
-</body>
-
+    <main>
+      <h2>Unsere Reise ins Saas-Tal</h2>
+      <section>Das Klassenlager der 1AM in Saas-Grund.</section>
+    </main>
+  </body>
 </html>
