--- a/index.html
+++ b/index.html
@@ -11,28 +11,14 @@
 
   <body>
     <header>
-      <h1>Klassenlager</h1>
-      <nav id="header-nav">
-        <ul>
-          <li>
-            <a href="index.html" class="active">Lager</a>
-          </li>
-          <li>
-            <a href="index.html">Reise</a>
-          </li>
-          <li>
-            <a href="index.html">Beiträge</a>
-          </li>
-          <li>
-            <a href="gallery.html">Galerie</a>
-          </li>
-        </ul>
-      </nav>
+      <h1>Webseite von ...</h1>
     </header>
 
     <main>
       <h2>Unsere Reise ins Saas-Tal</h2>
       <section>Das Klassenlager der 1AM in Saas-Grund.</section>
     </main>
+
+    <footer>Meine Webseite</footer>
   </body>
 </html>
