--- a/index.html
+++ b/index.html
@@ -15,8 +15,25 @@
     </header>
 
     <main>
-      <h2>Unsere Reise ins Saas-Tal</h2>
-      <section>Das Klassenlager der 1AM in Saas-Grund.</section>
+      <section>
+        <h2>Dies ist ein erster Abschnitt</h2>
+        Abschnitte haben immer einen Titel und dann den Text.
+      </section>
+
+      <section>
+        <h2>Das p-Tag</h2>
+        <p>Der Text sollte immer in ein p gepackt werden.</p>
+        <p>Mit dem p ist es auch möglich einen Zeilenumbruch zu haben.</p>
+      </section>
+
+      <section>
+        <h2>Unterseiten verlinken</h2>
+        <p>
+          Wir können auch weitere Webseiten verknüpfen, dafür müssen wir nur
+          einen Link angeben, wie zum Beispiel zu den
+          <a href="./unterseiten/hobbies.html">Hobbies</a>.
+        </p>
+      </section>
     </main>
 
     <footer>Meine Webseite</footer>
